fix bug on ios involving blue bar appearing on right hand side

--- a/app/assets/stylesheets/quill/home.css.scss
+++ b/app/assets/stylesheets/quill/home.css.scss
@@ -1,3 +1,10 @@
+html,body {
+  width: 100%;
+  overflow-x:hidden;
+  -webkit-overflow-scrolling: touch;
+}
+
+
 #apDiv5 {
   .content {
     position: absolute;
